fix: skill list wrap

--- a/src/app/projects/page.module.css
+++ b/src/app/projects/page.module.css
@@ -63,6 +63,7 @@
 .projects-list-item-skills_list {
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
